<resources>
    <string name="app_name">EraBi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="heading">New Era Public School Kaudiya, Chamradih, Azamgarh (U.P.)</string>
    <string name="student_name">Student Name</string>
    <string name="help">Any assistance, Please call at \n+91 – 6386759815/7388410890</string>
    <string name="father_name">Father Name</string>
    <string name="class_name">Class Name</string>
    <string name="roll_no">Roll No.</string>
    <string name="month_name">Month Name</string>
    <string name="tution_fees">Tution Fee(\u20B9)</string>
    <string name="van_fees">Van Fee(\u20B9)</string>
    <string name="exam_fees">Exam Fee(\u20B9)</string>
    <string name="other_fees">Other Fee(\u20B9)</string>
    <string name="total">Total Fee(\u20B9)</string>
    <string name="scan">Scan</string>
    <string name="loading">Loading…</string>
    <string name="print">Print</string>
    <string name="disable">Disable</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="generate_excel">generate Excel</string>
    <string name="select_activity">Select activity</string>
    <string name="billing_year">Billing Year</string>
    <string name="billed_students">Billing Received</string>
    <string name="billing_pending">Billing Pending</string>
    <string name="total_students">Total Students</string>
    <string name="more"><![CDATA[More>>]]></string>
    <string name="billing_summary">Month wise Billing Summary</string>
    <string name="select_month">Month e.g. Jan</string>
    <string name="select_year">Year e.g. 2022</string>
    <string name="back">Back</string>
    <string name="share">Share&#160;&#160;</string>
    <string name="bill_preview">Bill Preview</string>
    <string name="bill_number">Bill Number</string>
    <string name="billing_date">Bill Date</string>
    <string name="billing_month">Bill Month (month/year)</string>
    <string name="disclaimer"><![CDATA[Design & Developed by \n @Ramapati Maurya]]></string>
    <string name="era_public_school">Era Public School</string>
    <string name="class_name_e_g_4">class name e.g. 4</string>
    <string name="excel_status_n">Excel is not generated. Please generate it.</string>
    <string name="excel_status">Excel is generated. Please re-generate it.</string>
    <string name="generate">Generate&#160;&#160;</string>
    <string name="ok">OK</string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
</resources>